--- a/_posts/2017-04-08-scalar-2017.md
+++ b/_posts/2017-04-08-scalar-2017.md
@@ -13,7 +13,7 @@ I have used three metrics to rate the quality of the presentations:
 - **Quality** - Measure of how good the presentation was from technical point of view.
 - **Relevancy** - Measure of how relevant to me was the presentation. The best presentation has to be either general or very close to what I'm doing. Also the presentation should be slightly above our level of understanding the topic.
 
-I will add the links to the videos once they are published. At the end you can find links to interesting libraries/resources mentioned at the conference. Some of the presentations are missing the comment, I will add it once I can refresh my memory with videos.
+All the videos are avaiable [here](https://www.youtube.com/playlist?list=PL8NC5lCgGs6Pd7RCawHK4XN0oq23oRe7U). At the end you can find links to interesting libraries/resources mentioned at the conference. 
 
 * TOC
 {:toc}
@@ -22,49 +22,49 @@ I will add the links to the videos once they are published. At the end you can f
 ## The best
 These are the presentations that should be watched. All of them are very good, both in terms of the content and quality. I've tried to put them in order from the best.
 
-#### 1. GETTING MORE MILEAGE FROM YOUR MONADS WITH MTL - PAWEŁ SZULC
+#### 1. [GETTING MORE MILEAGE FROM YOUR MONADS WITH MTL](https://www.youtube.com/watch?v=knK70T4X7YE&list=PL8NC5lCgGs6Pd7RCawHK4XN0oq23oRe7U&index=15) - PAWEŁ SZULC
 Great presentation about how we can avoid using monad transformers. Very pleasant to listen, maybe a little to fast(not enough time to present).
 
 Content: 8
 Quality: 9.5
 Relevancy/Influence: 8
 
-#### 2. QUARK: A PURELY-FUNCTIONAL SCALA DSL FOR DATA PROCESSING & ANALYTICS - JOHN A. DE GOES
+#### 2. [QUARK: A PURELY-FUNCTIONAL SCALA DSL FOR DATA PROCESSING & ANALYTICS](https://www.youtube.com/watch?v=_-GD8VJW8jU&list=PL8NC5lCgGs6Pd7RCawHK4XN0oq23oRe7U&index=1) - JOHN A. DE GOES
 Very nice example of purely-functional programming. John presented Quark, which is DSL for creating data analysis flows similar to this available in Spark. I understood the examples but wouldn't be able to reproduce the solution. Shows how we can use GADTs and Finally Tagless to create interpreted data structures.
 
 Content: 9
 Quality: 8
 Relevancy/Influence: 8
 
-#### 3. FUNCTIONAL FOUNDATION OF EVENT SOURCED APPLICATION - RENATO CAVALCANTI 
+#### 3. [FUNCTIONAL FOUNDATION OF EVENT SOURCED APPLICATION](https://www.youtube.com/watch?v=5t4u4LiJgUw&list=PL8NC5lCgGs6Pd7RCawHK4XN0oq23oRe7U&index=20) - RENATO CAVALCANTI 
 Event sourcing expressed as functions signatures. Introduction to Fun.CQRS library. Nice introduction to CQRS in general.
 
 Content: 8
 Quality: 8
 Relevancy/Influence: 8
 
-#### 4. MODULARITY À LA ML - IONUȚ G. STAN
+#### 4. [MODULARITY À LA ML](https://www.youtube.com/watch?v=KB6sq-oOyqI&list=PL8NC5lCgGs6Pd7RCawHK4XN0oq23oRe7U&index=10) - IONUȚ G. STAN
 Very interesting presentation showing how Scala is inspired by Standard ML language.
 
 Content: 7
 Quality: 7
 Relevancy/Influence: 8
 
-#### 5. LEARN YOU AKKA STREAMS FOR GREAT GOOD! - HEIKO SEEBERGER
+#### 5. [LEARN YOU AKKA STREAMS FOR GREAT GOOD!](https://www.youtube.com/watch?v=NeAqE5dWB3o&list=PL8NC5lCgGs6Pd7RCawHK4XN0oq23oRe7U&index=6) - HEIKO SEEBERGER
 Live coding demo of Akka Streams. 
 
 Content: 7
 Quality: 8
 Relevancy/Influence: 6
 
-#### 6. PRACTICAL MONAD TRANSFORMERS - GABRIELE PETRONELLA
+#### 6. [PRACTICAL MONAD TRANSFORMERS](https://www.youtube.com/watch?v=9wU7u8IG8Rk&list=PL8NC5lCgGs6Pd7RCawHK4XN0oq23oRe7U&index=4) - GABRIELE PETRONELLA
 Very nice introduction to monad transformers.
 
 Content: 7
 Quality: 6
 Relevancy/Influence: 8
 
-#### 7. ADVENTURES IN META-PROGRAMMING - DAVE GURNELL 
+#### 7. [ADVENTURES IN META-PROGRAMMING](https://www.youtube.com/watch?v=Jl5WZAZ--jw&list=PL8NC5lCgGs6Pd7RCawHK4XN0oq23oRe7U&index=3) - DAVE GURNELL 
 Good comparison between shapeless and macros for meta-programming.
 
 Content: 7
